<resources>
    <string name="app_name">Pandoe</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="desc_logo_pandoe">desc: logo pandoe</string>
    <string name="desc_splash_page_ornament">desc: splash page ornament</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="login">Masuk</string>
    <string name="forget_password">Lupa Password</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="input_password_hint">Masukkan password kamu</string>
    <string name="password">Password</string>
    <string name="input_email_hint">Masukkan email kamu</string>
    <string name="email">Email</string>
    <string name="login_description">Silahkan masuk untuk mengakses Pandoe</string>
    <string name="login_title">Halo, Selamat Datang Kembali!</string>
    <string name="accept_tnc_confirmation"><![CDATA[Saya setuju dengan syarat & ketentuan]]></string>
    <string name="register">Daftar</string>
    <string name="already_have_account">Sudah memiliki akun?</string>
    <string name="register_title">Yuk, Daftarkan Dirimu!</string>
    <string name="register_description">Silahkan daftar untuk mengakses Pandoe</string>
    <string name="name">Nama</string>
    <string name="input_name_hint">Masukkan nama kamu</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="confirm_password_input_hint">Konfirmasi password kamu</string>
    <string name="start">Mulai</string>
    <string name="growth_business_description">Bisa membuat bisnis yang sesuai dan mampu bersaing dengan pembisnis lainnya.</string>
    <string name="growth_business_titile">Kembangkan Bisnis</string>
    <string name="new_business_description">Ingin memulai bisnis yang cemerlang, dan bisa berkembang kedepannya.</string>
    <string name="new_business_titile">Memulai Bisnis</string>
    <string name="select_business_first">Pilih jenis bisnis terlebih dahulu</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="start_title">Pilih yang Sesuai Denganmu</string>
    <string name="create_recommendation">Buat Rekomendasi</string>
    <string name="user_preference_title">Lengkapi data preferensi anda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Beranda</string>
    <string name="course">Belajar</string>
    <string name="funding">Pendanaan</string>
    <string name="chat">Chat</string>
    <string name="profile">Profil</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="help">Bantuan</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="privacy">Privasi</string>
    <string name="account_info">Tentang Akun</string>
    <string name="item_image">Item Image</string>
    <string name="item_title">Item Title</string>
    <string name="article">Artikel</string>
    <string name="greeting_message">Selamat Sore,</string>
    <string name="tagline">Kembangkan bisnismu bersama Pandoe</string>
    <string name="learning_status">Ongoing</string>
    <string name="continue_learning">Lanjutkan</string>
    <string name="learning_progress">Progres Belajarmu</string>
    <string name="see_all">Lihat Semua</string>
    <string name="save">Simpan</string>
    <string name="generate_business_title">Bisnis yang kami rekomendasikan</string>
</resources>